ingressTest/test2-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test2
  template:
    metadata:
      labels:
        app: nginx-test2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html
          subPath: index.html
      volumes:
      - name: nginx-html
        configMap:
          name: test2-cm

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test2
  namespace: default
spec:
  selector:
    app: nginx-test2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
